Perf work around concert parsing (lists -> dictionaries)

--- a/WP8/WP8.csproj
+++ b/WP8/WP8.csproj
@@ -117,6 +117,7 @@
       <DependentUpon>ConcertDetail.xaml</DependentUpon>
     </Compile>
     <Compile Include="ConcertListings.cs" />
+    <Compile Include="ConcertListingsParser.cs" />
     <Compile Include="Databinding.cs" />
     <Compile Include="Location.cs" />
     <Compile Include="MainPage.xaml.cs">
