Splash screen app walkthrough pivot page tied to first boot flag

--- a/WP8/WP8.csproj
+++ b/WP8/WP8.csproj
@@ -128,6 +128,12 @@
     <Compile Include="Model\ConcertItem.cs" />
     <Compile Include="Model\TagItem.cs" />
     <Compile Include="Model\VenueItem.cs" />
+    <Compile Include="NewFeatures.xaml.cs">
+      <DependentUpon>NewFeatures.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="PivotPageDotIndicator.xaml.cs">
+      <DependentUpon>PivotPageDotIndicator.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings.cs" />
     <Compile Include="Strings.Designer.cs">
@@ -164,6 +170,14 @@
       <Generator>MSBuild:Compile</Generator>
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="NewFeatures.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="PivotPageDotIndicator.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
   <ItemGroup>
